--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
   </header>
 
 </body>
-  <!-- Sección de Flores Eternas -->
+ <!-- Sección de Flores Eternas -->
 <section class="flower-section">
   <h2>Flores Eternas</h2>
   <div class="flower-carousel">
@@ -113,6 +113,7 @@
       <img src="https://via.placeholder.com/300x200/ADD8E6/000000?text=Eterna+Azul" alt="Eterna Azul">
       <h3>Eterna Azul</h3>
       <p>Una flor que simboliza la serenidad y la paz eterna. Con un tono azul profundo que jamás perderá su brillo.</p>
+      <p class="price">S/ 39.90</p>
       <button onclick="window.location.href='https://wa.me/1234567890'">Comprar por WhatsApp</button>
     </div>
 
@@ -120,6 +121,7 @@
       <img src="https://via.placeholder.com/300x200/FF6347/000000?text=Eterna+Roja" alt="Eterna Roja">
       <h3>Eterna Roja</h3>
       <p>La flor del amor y la pasión, cuyo color rojo vibrante permanecerá intacto por siempre.</p>
+      <p class="price">S/ 42.50</p>
       <button onclick="window.location.href='https://wa.me/1234567890'">Comprar por WhatsApp</button>
     </div>
 
@@ -127,6 +129,7 @@
       <img src="https://via.placeholder.com/300x200/FFFFFF/000000?text=Eterna+Blanca" alt="Eterna Blanca">
       <h3>Eterna Blanca</h3>
       <p>Pureza y elegancia en su forma más sublime. Una flor blanca que perdurará más allá del tiempo.</p>
+      <p class="price">S/ 38.00</p>
       <button onclick="window.location.href='https://wa.me/1234567890'">Comprar por WhatsApp</button>
     </div>
 
@@ -134,6 +137,7 @@
       <img src="https://via.placeholder.com/300x200/FFB6C1/000000?text=Eterna+Rosa" alt="Eterna Rosa">
       <h3>Eterna Rosa</h3>
       <p>Suave, romántica y delicada. La eterna rosa mantiene su frescura y belleza eternamente.</p>
+      <p class="price">S/ 40.00</p>
       <button onclick="window.location.href='https://wa.me/1234567890'">Comprar por WhatsApp</button>
     </div>
 
@@ -141,6 +145,7 @@
       <img src="https://via.placeholder.com/300x200/FFFF00/000000?text=Eterna+Amarilla" alt="Eterna Amarilla">
       <h3>Eterna Amarilla</h3>
       <p>El sol siempre brilla con la eterna flor amarilla. Brillante y llena de vida.</p>
+      <p class="price">S/ 37.50</p>
       <button onclick="window.location.href='https://wa.me/1234567890'">Comprar por WhatsApp</button>
     </div>
 
@@ -148,6 +153,7 @@
       <img src="https://via.placeholder.com/300x200/FFA500/000000?text=ÉterFlor" alt="ÉterFlor">
       <h3>ÉterFlor</h3>
       <p>Flor vibrante que aporta energía y vitalidad. Siempre radiante, siempre viva.</p>
+      <p class="price">S/ 45.00</p>
       <button onclick="window.location.href='https://wa.me/1234567890'">Comprar por WhatsApp</button>
     </div>
   </div>
@@ -197,7 +203,13 @@
   .flower-item p {
     font-size: 14px;
     color: #666;
-    margin-bottom: 15px;
+    margin-bottom: 10px;
+  }
+  .flower-item .price {
+    font-weight: bold;
+    color: #e67300;
+    font-size: 16px;
+    margin-bottom: 10px;
   }
   .flower-item button {
     padding: 10px 20px;
