--- a/index.html
+++ b/index.html
@@ -568,6 +568,44 @@
       <p><del>S/162.90</del> <strong>Combo: S/138.90</strong></p>
       <button onclick="window.location.href='https://wa.me/993018108'">Pedir por WhatsApp</button>
     </div>
+    <!-- Combo 4 -->
+<div class="promo-item">
+  <h3>Combo Serenidad</h3>
+  <img src="https://via.placeholder.com/300x200/E6E6FA/000000?text=Alma+de+Lavanda" alt="Libro">
+  <p><strong>Libro:</strong> Alma de Lavanda</p>
+  <img src="https://via.placeholder.com/300x200/9370DB/ffffff?text=Eterna+Lila" alt="Flor">
+  <p><strong>Flor:</strong> Eterna Lila</p>
+  <img src="https://via.placeholder.com/300x200/808080/ffffff?text=Humidificador+Zen" alt="Electro">
+  <p><strong>Electrodoméstico:</strong> Humidificador Zen</p>
+  <p><del>S/158.90</del> <strong>Combo: S/136.90</strong></p>
+  <button onclick="window.location.href='https://wa.me/993018108'">Pedir por WhatsApp</button>
+</div>
+
+<!-- Combo 5 -->
+<div class="promo-item">
+  <h3>Combo Energía Vital</h3>
+  <img src="https://via.placeholder.com/300x200/FFE4B5/000000?text=Despierta+tu+Poder" alt="Libro">
+  <p><strong>Libro:</strong> Despierta tu Poder</p>
+  <img src="https://via.placeholder.com/300x200/FFD700/000000?text=Eterna+Dorada" alt="Flor">
+  <p><strong>Flor:</strong> Eterna Dorada</p>
+  <img src="https://via.placeholder.com/300x200/DAA520/ffffff?text=Extractor+Nutri+" alt="Electro">
+  <p><strong>Electrodoméstico:</strong> Extractor Nutri+</p>
+  <p><del>S/174.90</del> <strong>Combo: S/149.90</strong></p>
+  <button onclick="window.location.href='https://wa.me/993018108'">Pedir por WhatsApp</button>
+</div>
+
+<!-- Combo 6 -->
+<div class="promo-item">
+  <h3>Combo Esencia Romántica</h3>
+  <img src="https://via.placeholder.com/300x200/FACAC3/000000?text=Cartas+al+Atardecer" alt="Libro">
+  <p><strong>Libro:</strong> Cartas al Atardecer</p>
+  <img src="https://via.placeholder.com/300x200/FFB6C1/000000?text=Eterna+Rosa" alt="Flor">
+  <p><strong>Flor:</strong> Eterna Rosa</p>
+  <img src="https://via.placeholder.com/300x200/FFC0CB/000000?text=Calienta+tazas+USB" alt="Electro">
+  <p><strong>Electrodoméstico:</strong> Calienta Tazas USB</p>
+  <p><del>S/148.90</del> <strong>Combo: S/126.90</strong></p>
+  <button onclick="window.location.href='https://wa.me/993018108'">Pedir por WhatsApp</button>
+</div>
 
   </div>
 </section>
